- fix ugly transitory 100x30 white rectangle that appears on top left on startup - fix scrollbar flicker

BUG: 149605

svn path=/trunk/KDE/kdelibs/; revision=722202